@@ -607,9 +607,9 @@ public class TimeModelDiscreteConfiguration extends JPanel4TimeModelConfiguratio
 		long step;
 		long stepInUnit;
 		if (stepString==null) {
-			step = new Long(0);
+			step = Long.valueOf(0);
 		} else if (stepString.equals("")) {
-			step = new Long(0);
+			step = Long.valueOf(0);
 		} else {
 			stepInUnit = Long.parseLong(this.getJTextFieldWidthValue().getText());
 			step = stepInUnit * timeUnit.getFactorToMilliseconds();
